<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/confirmTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorTextPrimary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/alarm_remove_confirm_title" />

    <TextView
        android:id="@+id/confirmDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmTitle"
        tools:text="@string/alarm_remove_confirm_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButtonPositive"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmDescription"
        tools:text="@string/remove" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButtonNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@id/confirmButtonPositive"
        app:layout_constraintTop_toBottomOf="@id/confirmDescription"
        tools:text="@string/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>